// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /vietnamese/articles/c3y59g5zm19o For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="vi"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="vi-VN"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/vietnamese/articles/c3y59g5zm19o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcvietnamese"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcvietnamese"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T13:09:10.490Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T13:09:10.490Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/vietnamese/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/vietnamese/articles/c3y59g5zm19o"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/vietnamese/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/vietnamese/articles/c3y59g5zm19o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Tiếng Việt","publishingPrinciples":"https://www.bbc.com/vietnamese/institutional-49283563","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/vietnamese/articles/c3y59g5zm19o","name":"Đây là tiêu đề SEO của bài viết thử nghiệm này"},"headline":"Đây là tiêu đề SEO của bài viết thử nghiệm này","datePublished":"2019-07-12T13:09:10.490Z","dateModified":"2019-07-12T13:09:10.490Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Tiếng Việt","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"},"noBylinesPolicy":"https://www.bbc.com/vietnamese/institutional-49283563#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c3y59g5zm19o/p01k6msp/vi/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Chúng tôi đã cập nhật Chính sách về Riêng tư và Cookie
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Chúng tôi có một số thay đổi quan trọng về Chính sách Riêng tư và Cookie, và muống bạn biết ý nghĩa của nó đối với bạn và dữ liệu của bạn.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        OK
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        Tìm hiểu các thay đổi
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Cho chúng tôi biết bạn đồng ý về cookie
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Chúng tôi dùng
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      cookie
                    </a>
                    để cho bạn trải nghiệm online tốt nhất. Cho chúng tôi biết bạn đồng ý về mọi cookie này.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        Vâng, tôi đồng ý
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        Không, đưa tôi xem phần Settings
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/vietnamese"
               class="StyledLink-m3awbo-2 gfHRao"
            >
              <svg height="24"
                   viewbox="0 0 268.46 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 iFLkRB"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M183 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3H183zM194 6.73h1.52v10.64H194zM204.17 12.44h-4.07v3.79h4.55v1.14h-5.93V6.86h5.69V8h-4.31v3.32h4.07zM215.4 6.73h1.45v10.64h-1.31l-7.12-8.2v8.2H207V6.73h1.23L215.4 15zM225.38 12.13h3.57v4.51a9.74 9.74 0 0 1-3.9.85 5.79 5.79 0 0 1-4.23-1.49 5.11 5.11 0 0 1-1.58-3.81 5.29 5.29 0 0 1 1.64-4 5.67 5.67 0 0 1 4.12-1.6 7.26 7.26 0 0 1 1.71.19 14 14 0 0 1 2 .71v1.56a7.49 7.49 0 0 0-3.71-1.1 4 4 0 0 0-3 1.19 4 4 0 0 0-1.2 2.92 3.93 3.93 0 0 0 1.2 3 4.26 4.26 0 0 0 3.08 1.15 7.18 7.18 0 0 0 2.19-.42h.14v-2.3h-2zM243.81 6.73h1.52l-4.5 10.69h-.35l-4.59-10.69h1.53l3.2 7.47zM247.33 6.73h1.52v10.64h-1.52zM257.49 12.44h-4.07v3.79H258v1.14h-6V6.86h5.69V8h-4.32v3.32h4.07zM259.57 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3h-3.65zM202.99 3.79h1.21l2.29-1.97h-1.92l-1.58 1.97zM201.06 3.68l-1.72 2.11h1.5l.79-1 .81 1h1.53l-1.76-2.11h-1.15zM254.95 19.13a1 1 0 0 0-.95.95.93.93 0 1 0 .95-.95zM255.53 3.68h-1.19l-1.89 2.11h1.56l.94-1.01.92 1.01h1.61l-1.95-2.11z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Tiếng Việt
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Bỏ qua để xem nội dung
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 dGlJrg"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                Mục
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Tin chính
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/vietnam"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Việt Nam
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/world"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Thế giới
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/forum"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Diễn đàn
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/business"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Kinh tế
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/magazine"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Nhịp sống mới
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/sport"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Thể thao
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/english"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Học tiếng Anh
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/media/video"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Video
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Tin chính
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/vietnam"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Việt Nam
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/world"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Thế giới
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/forum"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Diễn đàn
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/business"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Kinh tế
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/magazine"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Nhịp sống mới
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/sport"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Thể thao
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/english"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Học tiếng Anh
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/vietnamese/media/video"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Video
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=97&p=vietnamese.articles.c3y59g5zm19o.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:c3y59g5zm19o]&x2=[amp]&x3=[news-vietnamese]&x4=[vi]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[Đây+là+tiêu+đề+SEO+của+bài+viết+thử+nghiệm+này]&x11=[2019-07-12T13:09:10.490Z]&x12=[2019-07-12T13:09:10.490Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Vietnamese, Vietnamese - ART","uid":50924,"title":"Đây là tiêu đề SEO của bài viết thử nghiệm này","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 cBtcWN"
            >
              Đây là tiêu đề của bài viết thử nghiệm này
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="
Bản đồ Pháp hiển thị Paris và Cognac"
                             attribution
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg"
                             height="351"
                             width="624"
                    >
                    </amp-img>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 emSaHV">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Chụp lại hình ảnh,
                    </span>
                    <p>
                      Hình ảnh thử nghiệm này, bản quyền BBC, cho thấy một bản đồ của Pháp. Hình ảnh nằm trong ba khối đầu tiên và có chú thích này.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 tháng 7 2019
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Đây là một khối văn bản, chứa liên kết url đến
              <a href="https://www.bbc.com/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                trang chủ BBC Weather.
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/c3y59g5zm19o/p01k6msp/vi/amp"
                            title="Media player"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           layout="fill"
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           alt
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 bHbRwS">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          Máy của bạn không hỗ trợ nghe xem
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
              <figcaption class="Caption-sc-16x70so-0 emSaHV">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Chụp lại video,
                </span>
                <p>
                  Đây là một khối video chứa video về kiến
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Đây-là-một-khối-tiêu-đề-phụ"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 ihltMQ"
            >
              Đây là một khối tiêu đề phụ
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Cầu thủ bóng đá sau một trận đấu"
                             attribution="Getty Images"
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg"
                             height="1152"
                             width="2048"
                    >
                    </amp-img>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Nguồn hình ảnh,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Bài viết thử nghiệm này đã được tạo để chúng tôi có thể chạy thử nghiệm đầu cuối tự động trên trang web của chúng tôi.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/vietnamese"
               class="StyledLink-m3awbo-2 gfHRao"
            >
              <svg height="24"
                   viewbox="0 0 268.46 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 iFLkRB"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M183 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3H183zM194 6.73h1.52v10.64H194zM204.17 12.44h-4.07v3.79h4.55v1.14h-5.93V6.86h5.69V8h-4.31v3.32h4.07zM215.4 6.73h1.45v10.64h-1.31l-7.12-8.2v8.2H207V6.73h1.23L215.4 15zM225.38 12.13h3.57v4.51a9.74 9.74 0 0 1-3.9.85 5.79 5.79 0 0 1-4.23-1.49 5.11 5.11 0 0 1-1.58-3.81 5.29 5.29 0 0 1 1.64-4 5.67 5.67 0 0 1 4.12-1.6 7.26 7.26 0 0 1 1.71.19 14 14 0 0 1 2 .71v1.56a7.49 7.49 0 0 0-3.71-1.1 4 4 0 0 0-3 1.19 4 4 0 0 0-1.2 2.92 3.93 3.93 0 0 0 1.2 3 4.26 4.26 0 0 0 3.08 1.15 7.18 7.18 0 0 0 2.19-.42h.14v-2.3h-2zM243.81 6.73h1.52l-4.5 10.69h-.35l-4.59-10.69h1.53l3.2 7.47zM247.33 6.73h1.52v10.64h-1.52zM257.49 12.44h-4.07v3.79H258v1.14h-6V6.86h5.69V8h-4.32v3.32h4.07zM259.57 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3h-3.65zM202.99 3.79h1.21l2.29-1.97h-1.92l-1.58 1.97zM201.06 3.68l-1.72 2.11h1.5l.79-1 .81 1h1.53l-1.76-2.11h-1.15zM254.95 19.13a1 1 0 0 0-.95.95.93.93 0 1 0 .95-.95zM255.53 3.68h-1.19l-1.89 2.11h1.56l.94-1.01.92 1.01h1.61l-1.95-2.11z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Tiếng Việt
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-49283563"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Tại sao bạn có thể tin tưởng BBC News
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37622991"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Điều khoản sử dụng
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623840"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Về BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623841"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Chính sách riêng tư
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623842"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Liên hệ BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /vietnamese/articles/c3y59g5zm19o For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="vi"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="vi-VN"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/vietnamese/articles/c3y59g5zm19o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcvietnamese"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcvietnamese"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T13:09:10.490Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T13:09:10.490Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Đây là tiêu đề SEO của bài viết thử nghiệm này - BBC News Tiếng Việt
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/vietnamese/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/vietnamese/articles/c3y59g5zm19o"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/vietnamese/articles/c3y59g5zm19o.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/vietnamese/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/vietnamese/articles/c3y59g5zm19o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Tiếng Việt","publishingPrinciples":"https://www.bbc.com/vietnamese/institutional-49283563","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/vietnamese/articles/c3y59g5zm19o","name":"Đây là tiêu đề SEO của bài viết thử nghiệm này"},"headline":"Đây là tiêu đề SEO của bài viết thử nghiệm này","datePublished":"2019-07-12T13:09:10.490Z","dateModified":"2019-07-12T13:09:10.490Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Tiếng Việt","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"},"noBylinesPolicy":"https://www.bbc.com/vietnamese/institutional-49283563#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c3y59g5zm19o/p01k6msp/vi"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/vietnamese"
               class="StyledLink-m3awbo-2 gfHRao"
            >
              <svg height="24"
                   viewbox="0 0 268.46 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 iFLkRB"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M183 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3H183zM194 6.73h1.52v10.64H194zM204.17 12.44h-4.07v3.79h4.55v1.14h-5.93V6.86h5.69V8h-4.31v3.32h4.07zM215.4 6.73h1.45v10.64h-1.31l-7.12-8.2v8.2H207V6.73h1.23L215.4 15zM225.38 12.13h3.57v4.51a9.74 9.74 0 0 1-3.9.85 5.79 5.79 0 0 1-4.23-1.49 5.11 5.11 0 0 1-1.58-3.81 5.29 5.29 0 0 1 1.64-4 5.67 5.67 0 0 1 4.12-1.6 7.26 7.26 0 0 1 1.71.19 14 14 0 0 1 2 .71v1.56a7.49 7.49 0 0 0-3.71-1.1 4 4 0 0 0-3 1.19 4 4 0 0 0-1.2 2.92 3.93 3.93 0 0 0 1.2 3 4.26 4.26 0 0 0 3.08 1.15 7.18 7.18 0 0 0 2.19-.42h.14v-2.3h-2zM243.81 6.73h1.52l-4.5 10.69h-.35l-4.59-10.69h1.53l3.2 7.47zM247.33 6.73h1.52v10.64h-1.52zM257.49 12.44h-4.07v3.79H258v1.14h-6V6.86h5.69V8h-4.32v3.32h4.07zM259.57 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3h-3.65zM202.99 3.79h1.21l2.29-1.97h-1.92l-1.58 1.97zM201.06 3.68l-1.72 2.11h1.5l.79-1 .81 1h1.53l-1.76-2.11h-1.15zM254.95 19.13a1 1 0 0 0-.95.95.93.93 0 1 0 .95-.95zM255.53 3.68h-1.19l-1.89 2.11h1.56l.94-1.01.92 1.01h1.61l-1.95-2.11z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Tiếng Việt
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Bỏ qua để xem nội dung
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 dGlJrg"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Mục
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Tin chính
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/vietnam"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Việt Nam
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/world"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Thế giới
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/forum"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Diễn đàn
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/business"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Kinh tế
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/magazine"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Nhịp sống mới
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/sport"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Thể thao
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/english"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Học tiếng Anh
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/vietnamese/media/video"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Video
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Tin chính
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/vietnam"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Việt Nam
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/world"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Thế giới
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/forum"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Diễn đàn
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/business"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Kinh tế
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/magazine"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Nhịp sống mới
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/sport"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Thể thao
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/english"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Học tiếng Anh
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/vietnamese/media/video"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Video
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=97&amp;p=vietnamese.articles.c3y59g5zm19o.page&amp;x1=[urn:bbc:optimo:c3y59g5zm19o]&amp;x2=[responsive]&amp;x3=[news-vietnamese]&amp;x4=[vi]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Đây+là+tiêu+đề+SEO+của+bài+viết+thử+nghiệm+này]&amp;x11=[2019-07-12T13:09:10.490Z]&amp;x12=[2019-07-12T13:09:10.490Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 cBtcWN"
            >
              Đây là tiêu đề của bài viết thử nghiệm này
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg 624w"
                         alt="
Bản đồ Pháp hiển thị Paris và Cognac"
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg"
                         width="624"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 emSaHV">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Chụp lại hình ảnh,
                    </span>
                    <p>
                      Hình ảnh thử nghiệm này, bản quyền BBC, cho thấy một bản đồ của Pháp. Hình ảnh nằm trong ba khối đầu tiên và có chú thích này.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 tháng 7 2019
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Đây là một khối văn bản, chứa liên kết url đến
              <a href="https://www.bbc.com/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                trang chủ BBC Weather.
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <div class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp">
                  <div class="GuidanceWrapper-sc-1wm6qsk-0 bbhfNU">
                    <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
                            aria-hidden="true"
                    >
                      Contains strong language and adult humour.
                    </strong>
                    <noscript class="StyledNoScript-sc-1wm6qsk-2 fsOOOd">
                      <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO">
                        Máy của bạn không hỗ trợ nghe xem
                      </strong>
                    </noscript>
                  </div>
                  <button class="Button-sc-34e3rb-0 eSkqnH StyledPlayButton-sc-11nyhtu-1 bBTuxK">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
                    </span>
                    <div aria-hidden="true"
                         class="IconWrapper-sc-34e3rb-1 jGavfg"
                    >
                      <svg viewbox="0 0 32 32"
                           width="12px"
                           height="12px"
                           focusable="false"
                           aria-hidden="true"
                           class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                      >
                        <polygon points="3,32 29,16 3,0">
                        </polygon>
                      </svg>
                    </div>
                    <time datetime="PT3M11S"
                          aria-hidden="true"
                          class="TimeDuration-sc-34e3rb-2 cZLyLe"
                    >
                      03:11
                    </time>
                  </button>
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                </div>
              </div>
              <figcaption class="Caption-sc-16x70so-0 emSaHV">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Chụp lại video,
                </span>
                <p>
                  Đây là một khối video chứa video về kiến
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Đây-là-một-khối-tiêu-đề-phụ"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 ihltMQ"
            >
              Đây là một khối tiêu đề phụ
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <div class="lazyload-placeholder">
                    </div>
                    <noscript>
                      <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg 800w"
                           alt="Cầu thủ bóng đá sau một trận đấu"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg"
                           width="2048"
                           class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                      >
                    </noscript>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Nguồn hình ảnh,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Bài viết thử nghiệm này đã được tạo để chúng tôi có thể chạy thử nghiệm đầu cuối tự động trên trang web của chúng tôi.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/vietnamese"
               class="StyledLink-m3awbo-2 gfHRao"
            >
              <svg height="24"
                   viewbox="0 0 268.46 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 iFLkRB"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M183 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3H183zM194 6.73h1.52v10.64H194zM204.17 12.44h-4.07v3.79h4.55v1.14h-5.93V6.86h5.69V8h-4.31v3.32h4.07zM215.4 6.73h1.45v10.64h-1.31l-7.12-8.2v8.2H207V6.73h1.23L215.4 15zM225.38 12.13h3.57v4.51a9.74 9.74 0 0 1-3.9.85 5.79 5.79 0 0 1-4.23-1.49 5.11 5.11 0 0 1-1.58-3.81 5.29 5.29 0 0 1 1.64-4 5.67 5.67 0 0 1 4.12-1.6 7.26 7.26 0 0 1 1.71.19 14 14 0 0 1 2 .71v1.56a7.49 7.49 0 0 0-3.71-1.1 4 4 0 0 0-3 1.19 4 4 0 0 0-1.2 2.92 3.93 3.93 0 0 0 1.2 3 4.26 4.26 0 0 0 3.08 1.15 7.18 7.18 0 0 0 2.19-.42h.14v-2.3h-2zM243.81 6.73h1.52l-4.5 10.69h-.35l-4.59-10.69h1.53l3.2 7.47zM247.33 6.73h1.52v10.64h-1.52zM257.49 12.44h-4.07v3.79H258v1.14h-6V6.86h5.69V8h-4.32v3.32h4.07zM259.57 6.71h8.89v1.36h-3.71v9.3h-1.53v-9.3h-3.65zM202.99 3.79h1.21l2.29-1.97h-1.92l-1.58 1.97zM201.06 3.68l-1.72 2.11h1.5l.79-1 .81 1h1.53l-1.76-2.11h-1.15zM254.95 19.13a1 1 0 0 0-.95.95.93.93 0 1 0 .95-.95zM255.53 3.68h-1.19l-1.89 2.11h1.56l.94-1.01.92 1.01h1.61l-1.95-2.11z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Tiếng Việt
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-49283563"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Tại sao bạn có thể tin tưởng BBC News
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37622991"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Điều khoản sử dụng
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623840"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Về BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623841"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Chính sách riêng tư
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cookies
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/vietnamese/institutional-37623842"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Liên hệ BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:c3y59g5zm19o"},"type":"article","createdBy":"Vietnamese","language":"vi","lastUpdated":1569258826377,"firstPublished":1562936950490,"lastPublished":1562936950490,"options":{},"analyticsLabels":{},"passport":{"language":"vi","home":"http://www.bbc.co.uk/ontologies/passport/home/Vietnamese"},"tags":{},"version":"v1.1.2","blockTypes":["headline","text","paragraph","fragment","image","caption","altText","rawImage","urlLink","video","subheadline"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Đây là tiêu đề của bài viết thử nghiệm này","blocks":[{"type":"fragment","model":{"text":"Đây là tiêu đề của bài viết thử nghiệm này","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"image","model":{"blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Hình ảnh thử nghiệm này, bản quyền BBC, cho thấy một bản đồ của Pháp. Hình ảnh nằm trong ba khối đầu tiên và có chú thích này.","blocks":[{"type":"fragment","model":{"text":"Hình ảnh thử nghiệm này, bản quyền BBC, cho thấy một bản đồ của Pháp. Hình ảnh nằm trong ba khối đầu tiên và có chú thích này.","attributes":[]},"id":"mock-id","position":[2,1,1,1,1]}]},"id":"mock-id","position":[2,1,1,1]}]},"id":"mock-id","position":[2,1,1]}]},"id":"mock-id","position":[2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"\\rBản đồ Pháp hiển thị Paris và Cognac","blocks":[{"type":"fragment","model":{"text":"\\rBản đồ Pháp hiển thị Paris và Cognac","attributes":[]},"id":"mock-id","position":[2,2,1,1,1]}]},"id":"mock-id","position":[2,2,1,1]}]},"id":"mock-id","position":[2,2,1]}]},"id":"mock-id","position":[2,2]},{"type":"rawImage","model":{"width":624,"height":351,"locator":"f97b/test/0a203570-de25-11e9-b23c-f1ac9644bb55.jpg","originCode":"cpsdevpb","copyrightHolder":"BBC"},"id":"mock-id","position":[2,3]}]},"id":"mock-id","position":[2]},{"type":"timestamp","model":{"firstPublished":1562936950490,"lastPublished":1562936950490},"id":"mock-id","position":[3]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Đây là một khối văn bản, chứa liên kết url đến trang chủ BBC Weather.","blocks":[{"type":"fragment","model":{"text":"Đây là một khối văn bản, chứa liên kết url đến ","attributes":[]},"id":"mock-id","position":[4,1,1]},{"type":"urlLink","model":{"text":"trang chủ BBC Weather.","blocks":[{"type":"fragment","model":{"text":"trang chủ BBC Weather.","attributes":[]},"id":"mock-id","position":[4,1,2,1]}],"locator":"https://www.bbc.com/weather","isExternal":false},"id":"mock-id","position":[4,1,2]}]},"id":"mock-id","position":[4,1]}]},"id":"mock-id","position":[4]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p01k6msm","blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Đây là một khối video chứa video về kiến","blocks":[{"type":"fragment","model":{"text":"Đây là một khối video chứa video về kiến","attributes":[]},"id":"mock-id","position":[5,1,1,1,1]}]},"id":"mock-id","position":[5,1,1,1]}]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]},{"type":"aresMedia","model":{"blocks":[{"blockId":"urn:bbc:ares::clip:p01k6msm","type":"aresMediaMetadata","model":{"id":"mock-id","subType":"clip","format":"audio_video","title":"Five things ants can teach us about management","synopses":{"short":"They may be tiny, but us humans could learn a thing or two from ants."},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg","imageCopyright":"BBC","embedding":true,"advertising":true,"versions":[{"versionId":"p01k6msp","types":["Original"],"duration":191,"durationISO8601":"PT3M11S","warnings":{"short":"Contains strong language and adult humour.","long":"Contains strong language and adult humour."},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1540218932000}],"syndication":{"destinations":[]}},"id":"mock-id","position":[5,2,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"width":1920,"height":1080,"locator":"ichef.test.bbci.co.uk/images/ic/$widthxn/p01k6mtv.jpg","originCode":"mpv","copyrightHolder":"BBC"},"id":"mock-id","position":[5,2,2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ants","blocks":[{"type":"fragment","model":{"text":"Ants","attributes":[]},"id":"mock-id","position":[5,2,2,2,1,1,1]}]},"id":"mock-id","position":[5,2,2,2,1,1]}]},"id":"mock-id","position":[5,2,2,2,1]}]},"id":"mock-id","position":[5,2,2,2]}]},"id":"mock-id","position":[5,2,2]}]},"id":"mock-id","position":[5,2]}]},"id":"mock-id","position":[5]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Đây là một khối tiêu đề phụ","blocks":[{"type":"fragment","model":{"text":"Đây là một khối tiêu đề phụ","attributes":[]},"id":"mock-id","position":[6,1,1,1]}]},"id":"mock-id","position":[6,1,1]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Cầu thủ bóng đá sau một trận đấu","blocks":[{"type":"fragment","model":{"text":"Cầu thủ bóng đá sau một trận đấu","attributes":[]},"id":"mock-id","position":[7,1,1,1,1]}]},"id":"mock-id","position":[7,1,1,1]}]},"id":"mock-id","position":[7,1,1]}]},"id":"mock-id","position":[7,1]},{"type":"rawImage","model":{"width":2048,"height":1152,"locator":"a0b2/test/61a1ca20-de25-11e9-b23c-f1ac9644bb55.jpg","originCode":"cpsdevpb","copyrightHolder":"Getty Images"},"id":"mock-id","position":[7,2]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Bài viết thử nghiệm này đã được tạo để chúng tôi có thể chạy thử nghiệm đầu cuối tự động trên trang web của chúng tôi.","blocks":[{"type":"fragment","model":{"text":"Bài viết thử nghiệm này đã được tạo để chúng tôi có thể chạy thử nghiệm đầu cuối tự động trên trang web của chúng tôi.","attributes":[]},"id":"mock-id","position":[8,1,1]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]}]}},"promo":{"headlines":{"seoHeadline":"Đây là tiêu đề SEO của bài viết thử nghiệm này"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:c3y59g5zm19o"},"summary":"","timestamp":1562936950490,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Vietnamese","uri":"/vietnamese","type":"simple"},"groups":[]}},"path":"/vietnamese/articles/c3y59g5zm19o","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [51]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="vietnamese"
            src="http://localhost:7080/static/js/vietnamese-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
